# transcript-tiler

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: cut.py  render.py  sample.fillers.json  sample.json  sample.labels.json  sample.stops.json
src/transcript_tiler/: __init__.py  adapters.py  cli.py  export.py  features.py  fillers.py  stops.py  tile.py
src/wordtiler/: __init__.py  cli.py  stops.py  tile.py
