[project]
name = "transcript-tiler"
version = "0.1.0"
description = "Refine STT word timestamps into a complete word|silence|noise tiling with per-edge freedom, using energy + VAD only (no forced alignment)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adam Gordon Bell" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "silero-vad>=5.0",
    "torch>=2.0",
]

[project.scripts]
transcript-tiler = "transcript_tiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript_tiler"]
